Untitled Document
fs/iomap.c: In function ‘iomap_AIOS_read_end_io’:
fs/iomap.c:459:37: error: ‘struct lbio_vec’ has no member named ‘bv_offset’
    iomap_set_range_uptodate(page, bv->bv_offset, bv->bv_len);
                                     ^~
fs/iomap.c:459:52: error: ‘struct lbio_vec’ has no member named ‘bv_len’
    iomap_set_range_uptodate(page, bv->bv_offset, bv->bv_len);
                                                    ^~
In file included from ./include/linux/writeback.h:184:0,
                 from ./include/linux/memcontrol.h:31,
                 from ./include/linux/swap.h:9,
                 from ./include/linux/mm_inline.h:6,
                 from fs/iomap.c:22:
fs/iomap.c: In function ‘iomap_AIOS_readpage_actor’:
./include/linux/bio.h:71:55: error: ‘struct lbio’ has no member named ‘bi_iter’
 #define bio_end_sector(bio) bvec_iter_end_sector((bio)->bi_iter)
                                                       ^
./include/linux/bio.h:68:38: note: in definition of macro ‘bvec_iter_end_sector’
 #define bvec_iter_end_sector(iter) ((iter).bi_sector + bvec_iter_sectors((iter)))
                                      ^~~~
fs/iomap.c:507:19: note: in expansion of macro ‘bio_end_sector’
  if (ctx->lbio && bio_end_sector(ctx->lbio) == sector) {
                   ^~~~~~~~~~~~~~
./include/linux/bio.h:71:55: error: ‘struct lbio’ has no member named ‘bi_iter’
 #define bio_end_sector(bio) bvec_iter_end_sector((bio)->bi_iter)
                                                       ^
./include/linux/bio.h:67:35: note: in definition of macro ‘bvec_iter_sectors’
 #define bvec_iter_sectors(iter) ((iter).bi_size >> 9)
                                   ^~~~
./include/linux/bio.h:71:29: note: in expansion of macro ‘bvec_iter_end_sector’
 #define bio_end_sector(bio) bvec_iter_end_sector((bio)->bi_iter)
                             ^~~~~~~~~~~~~~~~~~~~
fs/iomap.c:507:19: note: in expansion of macro ‘bio_end_sector’
  if (ctx->lbio && bio_end_sector(ctx->lbio) == sector) {
                   ^~~~~~~~~~~~~~
fs/iomap.c:543:12: error: ‘struct lbio’ has no member named ‘bi_iter’
   ctx->lbio->bi_iter.bi_sector = sector;
            ^~
fs/iomap.c:548:24: error: ‘bdev’ undeclared (first use in this function); did you mean ‘cdev’?
    p = __disk_get_part(bdev->bd_disk, bdev->bd_partno);
                        ^~~~
                        cdev
fs/iomap.c:548:24: note: each undeclared identifier is reported only once for each function it appears in
fs/iomap.c: At top level:
fs/iomap.c:622:1: error: conflicting types for ‘iomap_AIOS_apply’
 iomap_AIOS_apply(struct inode *inode, loff_t pos, loff_t length, unsigned flags,
 ^~~~~~~~~~~~~~~~
In file included from fs/iomap.c:37:0:
fs/internal.h:192:8: note: previous declaration of ‘iomap_AIOS_apply’ was here
 loff_t iomap_AIOS_apply(struct inode *inode, loff_t pos, loff_t length, unsigned flags,
        ^~~~~~~~~~~~~~~~

